# Project-Python-Web

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tree_view.py
alembic/: env.py
app/: deps.py  main.py
app/api/: search.py  users.py
app/api/routers/: __init__.py  auth.py  comments.py  photos.py  posts.py  ratings.py  search.py  tags.py  users.py
app/core/: config.py  security.py
app/crud/: comment.py  photo.py  rating.py  tag.py  user.py
app/db/: base.py  database.py  session.py
app/docs/: descriptions.py
app/models/: __init__.py  association.py  comment.py  models.py  photo.py  rating.py  role.py  tag.py  transformed_link.py  user.py
app/repository/: comments.py  profile.py  users.py
app/schemas/: __init__.py  comment.py  photo.py  rating.py  schemas.py  tag.py  user.py
app/services/: auth.py  auth_service.py  cloudinary_avatar.py  cloudinary_service.py  hcaptcha.py  posts.py  qr_services.py  redis_service.py  roles.py  tags.py
app/utils/: mailer.py
scripts/: create_admin.py
tests/: conftest.py  test_auth.py  test_comments.py  test_photos.py  test_ratings.py  test_search.py
tests/tests/: test_photos_async.py
